--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             height: 100vh;
         }
     </style>
-    <link rel="stylesheet" href="./css/leaflet.css" />
-    <script src="./js/leaflet.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet-src.min.js"></script>
     <noscript>Your browser does not support javascript!</noscript>
     <!-- Mapbox GL -->
     <link rel="stylesheet" href="https://cdn.maptiler.com/mapbox-gl-js/v1.5.1/mapbox-gl.css" />
