--- a/index.html
+++ b/index.html
@@ -74,14 +74,7 @@
                     style: "mapbox://styles/mapbox/streets-v11",
                     accessToken: "pk.eyJ1Ijoibmd1eWVuYmFvMTQwMyIsImEiOiJja3VmNmxoeGIxcm5tMm5vMzY5NTlvM3M1In0.hZe8kTx5IOhr7RTupKYjsA"
                 }
-//             ).addTo(mymap);
-//             mapboxgl.accessToken = 'pk.eyJ1Ijoibmd1eWVuYmFvMTQwMyIsImEiOiJja3VmNmxoeGIxcm5tMm5vMzY5NTlvM3M1In0.hZe8kTx5IOhr7RTupKYjsA';
-//             const map = new mapboxgl.Map({
-//             container: 'mymap', // container ID
-//             style: 'mapbox://styles/mapbox/streets-v11', // style URL
-//             center: [-74.5, 40], // starting position [lng, lat]
-//             zoom: 9 // starting zoom
-//             });
+            ).addTo(mymap);
         }
         //Them cac doi tuong rieng le
         //Point
